apiInfo; bug fix for cmdbar
Former-commit-id: 7b863705646c79d7b8ef7032843524577c9f50e3 [formerly fe3fbde8b193e722a100a33266eaf6ace85c42d2]
Former-commit-id: 12d750c773e9f83a4549f315254d2abd71c0ea04

--- a/ExViewer/Views/GalleryPage.xaml
+++ b/ExViewer/Views/GalleryPage.xaml
@@ -685,7 +685,7 @@
             <CommandBar.Content>
                 <Grid>
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="48" />
+                        <ColumnDefinition Width="Auto" />
                         <ColumnDefinition />
                     </Grid.ColumnDefinitions>
                     <Button Style="{StaticResource SplitButtonStyle}"
@@ -701,6 +701,9 @@
                     </TextBlock>
                 </Grid>
             </CommandBar.Content>
+            <CommandBar.PrimaryCommands>
+                
+            </CommandBar.PrimaryCommands>
             <CommandBar.SecondaryCommands>
                 <AppBarButton x:Uid="GalleryPageOpenInBrowserAppBarButton"
                               x:Name="abb_open"
