Bug fix for filpview crash
Former-commit-id: 9b300068608bc760e4c3fb421d9a2c4bd492faa8 [formerly df04a17c4572049f360452aed55251682b865a6b]
Former-commit-id: 7b1ad30583d3aa037e7ad6f302c2dcaa02d9d860

--- a/ExViewer/Views/ImagePage.xaml
+++ b/ExViewer/Views/ImagePage.xaml
@@ -58,11 +58,10 @@
                   RelativePanel.AlignTopWithPanel="True"
                   EntranceNavigationTransitionInfo.IsTargetElement="True"
                   SelectionChanged="fv_SelectionChanged"
-                  ItemsSource="{x:Bind VM.Gallery, Mode=OneWay}"
                   Background="{StaticResource ApplicationPageBackgroundThemeBrush}">
             <FlipView.ItemTemplate>
                 <DataTemplate xmlns:c="using:ExClient"
-                              x:DataType="c:GalleryImage">
+                              x:DataType="local:IImagePageImageView">
                     <Grid DoubleTapped="fvi_DoubleTapped"
                           Tapped="fvi_Tapped">
                         <Grid.Resources>
@@ -73,11 +72,11 @@
                         </Grid.RowDefinitions>
                         <controls:ImagePresenter x:Name="ip"
                                                  Grid.RowSpan="2"
-                                                 Image="{x:Bind}" />
-                        <ProgressBar Value="{x:Bind Progress, Mode=OneWay}"
-                                     Visibility="{x:Bind State, Mode=OneWay, Converter={StaticResource LoadStateToVisualStateConverter}}"
-                                     Foreground="{x:Bind State, Mode=OneWay, Converter={StaticResource LoadStateToVisualStateConverter}}"
-                                     IsIndeterminate="{x:Bind State, Mode=OneWay, Converter={StaticResource LoadStateToVisualStateConverter}}"
+                                                 Image="{x:Bind Image}" />
+                        <ProgressBar Value="{x:Bind Image.Progress, Mode=OneWay}"
+                                     Visibility="{x:Bind Image.State, Mode=OneWay, Converter={StaticResource LoadStateToVisualStateConverter}}"
+                                     Foreground="{x:Bind Image.State, Mode=OneWay, Converter={StaticResource LoadStateToVisualStateConverter}}"
+                                     IsIndeterminate="{x:Bind Image.State, Mode=OneWay, Converter={StaticResource LoadStateToVisualStateConverter}}"
                                      VerticalAlignment="Top"
                                      Grid.Row="1" />
                     </Grid>
