--- a/ExViewer/Views/LogOnDialog.xaml
+++ b/ExViewer/Views/LogOnDialog.xaml
@@ -9,6 +9,7 @@
                Loaded="ContentDialog_Loaded"
                PrimaryButtonText="OK"
                SecondaryButtonText="?"
+               Closing="ContentDialog_Closing"
                PrimaryButtonClick="ContentDialog_PrimaryButtonClick"
                SecondaryButtonClick="ContentDialog_SecondaryButtonClick"
                IsPrimaryButtonEnabled="{x:Bind pb_Loading.IsIndeterminate, Converter={StaticResource LogicalNotConverter}, Mode=OneWay}"
