--- a/ExViewer/Views/RootControl.xaml
+++ b/ExViewer/Views/RootControl.xaml
@@ -2,6 +2,7 @@
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:local="using:ExViewer"
+      x:Name="page"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       mc:Ignorable="d"
@@ -97,7 +98,7 @@
                                     Margin="8"
                                     MaxWidth="200"
                                     TextTrimming="CharacterEllipsis"
-                                    Text="{x:Bind userInfo.DisplayName, FallbackValue=Guest}"
+                                    Text="{Binding userInfo.DisplayName, ElementName=page, FallbackValue={StaticResource GuestUserNameString}}"
                                     HorizontalAlignment="Center"
                                     VerticalAlignment="Center" />
                         <Button x:Uid="RootControlChangeUserButton"
