--- a/ExViewer/Views/AboutPage.xaml
+++ b/ExViewer/Views/AboutPage.xaml
@@ -18,11 +18,11 @@
             <RowDefinition Height="48" />
             <RowDefinition />
         </Grid.RowDefinitions>
-        <Rectangle Fill="{StaticResource SystemControlBackgroundChromeMediumBrush}" />
+        <Rectangle Fill="{ThemeResource SystemControlBackgroundChromeMediumBrush}" />
         <Button Style="{StaticResource SplitButtonStyle}"
                 Click="btn_Pane_Click" />
         <ScrollViewer Grid.Row="1"
-                      Background="{StaticResource ApplicationPageBackgroundThemeBrush}"
+                      Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
                       VerticalScrollBarVisibility="Auto"
                       HorizontalScrollMode="Disabled">
             <StackPanel Padding="8">
