--- a/ExViewer/Views/SettingsPage.xaml
+++ b/ExViewer/Views/SettingsPage.xaml
@@ -66,7 +66,7 @@
         </TransitionCollection>
     </Page.Transitions>
     <Pivot x:Name="pv_root"
-           Background="{StaticResource ApplicationPageBackgroundThemeBrush}"
+           Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
            BorderBrush="{ThemeResource SystemControlBackgroundChromeMediumBrush}">
         <Pivot.LeftHeader>
             <Button Style="{StaticResource SplitButtonStyle}"
