--- a/ExViewer/Views/AboutPage.xaml
+++ b/ExViewer/Views/AboutPage.xaml
@@ -18,11 +18,11 @@
             <RowDefinition Height="48" />
             <RowDefinition />
         </Grid.RowDefinitions>
-        <Rectangle Fill="{ThemeResource SystemControlBackgroundChromeMediumBrush}" />
-        <Button Style="{StaticResource SplitButtonStyle}"
-                Click="btn_Pane_Click" />
+        <Border Background="{ThemeResource SystemControlBackgroundChromeMediumBrush}">
+            <Button Style="{StaticResource SplitButtonStyle}"
+                    Click="btn_Pane_Click" />
+        </Border>
         <ScrollViewer Grid.Row="1"
-                      Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
                       VerticalScrollBarVisibility="Auto"
                       HorizontalScrollMode="Disabled">
             <StackPanel Padding="8">
