--- a/ExViewer/Views/CachePage.xaml
+++ b/ExViewer/Views/CachePage.xaml
@@ -50,8 +50,7 @@
                              RelativePanel.AlignLeftWithPanel="True"
                              RelativePanel.AlignRightWithPanel="True"
                              RelativePanel.Below="cb_top"
-                             RefreshInvoked="PullToRefreshBox_RefreshInvoked"
-                             Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+                             RefreshInvoked="PullToRefreshBox_RefreshInvoked">
             <ListView x:Name="lv"
                       ItemsSource="{x:Bind VM.CachedGalleries, Mode=OneWay}"
                       Style="{StaticResource GalleryListViewStyle}"
