--- a/ExViewer/Views/RootControl.xaml
+++ b/ExViewer/Views/RootControl.xaml
@@ -1,17 +1,16 @@
 ﻿<Page x:Class="ExViewer.Views.RootControl"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:local="using:ExViewer"
-      x:Name="page"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      xmlns:local="using:ExViewer"
+      xmlns:controls="using:ExViewer.Controls"
       mc:Ignorable="d"
+      x:Name="page"
       IsTextScaleFactorEnabled="False"
       Loading="Control_Loading"
       Loaded="Control_Loaded"
-      Unloaded="Control_Unloaded"
-      xmlns:controls="using:ExViewer.Controls"
-      GotFocus="Grid_GotFocus">
+      Unloaded="Control_Unloaded">
     <UserControl.Resources>
         <Storyboard x:Key="ShowDisablePanel">
             <DoubleAnimation Duration="0:0:0.5"
