IP bug fix; IPCV cache capacity
Former-commit-id: aa5ae3520a4bd72747259421d4b41e8aaa686d0c [formerly f967a5abff8623f6ab97499696ab0ad63a00bcb9]
Former-commit-id: 82b0702e6c08a8cea01a8e43fae3494bc1903c9c

--- a/ExViewer/Controls/ImagePresenter.xaml
+++ b/ExViewer/Controls/ImagePresenter.xaml
@@ -47,7 +47,8 @@
                    Source="{ThemeResource LoadingImageSource}" 
                    Visibility="{x:Bind Image, Mode=OneWay, Converter={StaticResource NullToVisibleConverter}}"/>
             <Image x:Name="img_Thumb"
-                   Source="{x:Bind Image.Thumb, Mode=OneWay}" />
+                   Source="{x:Bind Image.Thumb, Mode=OneWay}"
+                   Visibility="{x:Bind Image, Mode=OneWay, Converter={StaticResource NullToCollapsedConverter}}" />
             <ContentControl x:Name="cc_Image"
                             Content="{x:Bind Image, Mode=OneWay}"
                             ContentTemplateSelector="{StaticResource ImageTemplateSelector}"
@@ -55,7 +56,8 @@
                             VerticalAlignment="Stretch"
                             HorizontalContentAlignment="Stretch"
                             VerticalContentAlignment="Stretch"
-                            IsTabStop="False" />
+                            IsTabStop="False"
+                            Visibility="{x:Bind Image, Mode=OneWay, Converter={StaticResource NullToCollapsedConverter}}" />
         </Grid>
     </ScrollViewer>
 </UserControl>
