Move Settings to a indepadent project
Former-commit-id: 4e60711760fb66a815ae4d652786fb90ab369cbc [formerly c030a877605887fb913d44336c140b7c5752e3f7]
Former-commit-id: 3169e28fc0ee0f10986da062c3f0f5b4a375e537

--- a/ExViewer/Views/AboutPage.xaml
+++ b/ExViewer/Views/AboutPage.xaml
@@ -176,6 +176,7 @@ M0.1,49.9h1.8l0.8-3.3h2.9L6,45.2H3.1l0.5-2.1h3.1l0.4-1.7h-5L0.1,49.9z M8,49.9l0.
                                  x:Uid="AboutPageForumsHyperlinkButton"
                                  Content="E-Hentai Forums"
                                  NavigateUri="https://forums.e-hentai.org/index.php" />
+                <Button Content="Debug Info" Click="Button_Click"/>
             </StackPanel>
         </ScrollViewer>
     </Grid>
