--- a/ExViewer/Views/SettingsPage.xaml
+++ b/ExViewer/Views/SettingsPage.xaml
@@ -7,56 +7,14 @@
       x:Class="ExViewer.Views.SettingsPage"
       NavigationCacheMode="Enabled"
       mc:Ignorable="d"
-      xmlns:settings="using:ExViewer.Settings">
+      xmlns:settings="using:ApplicationDataManager.Settings"
+      xmlns:settingXaml="using:ApplicationDataManager.Settings.Xaml">
     <Page.Resources>
-        <local:SettingTemplateSelector x:Key="SettingTemplateSelector" />
-        <DataTemplate x:Name="String"
-                      x:DataType="settings:SettingInfo">
-            <TextBox Text="{x:Bind Value, Converter={StaticResource EmptyConverter}, Mode=TwoWay}"
-                     MinHeight="50">
-                <TextBox.Header>
-                    <TextBlock Text="{x:Bind FriendlyName}"
-                               TextWrapping="WrapWholeWords" />
-                </TextBox.Header>
-            </TextBox>
-        </DataTemplate>
-        <DataTemplate x:Name="Number"
-                      x:DataType="settings:SettingInfo">
-            <Grid>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition Height="*" />
-                </Grid.RowDefinitions>
-                <TextBlock Text="{x:Bind FriendlyName}"
-                           FontWeight="{ThemeResource SliderHeaderThemeFontWeight}"
-                           TextWrapping="WrapWholeWords" />
-                <local:SettingSlider Grid.Row="1"
-                                     SettingValue="{x:Bind}">
-                </local:SettingSlider>
-            </Grid>
-        </DataTemplate>
-        <DataTemplate x:Name="Enum"
-                      x:DataType="settings:SettingInfo">
-            <local:SettingComboBox SettingValue="{x:Bind}"
-                                   HorizontalAlignment="Stretch">
-                <local:SettingComboBox.Header>
-                    <TextBlock Text="{x:Bind FriendlyName}"
-                               TextWrapping="WrapWholeWords" />
-                </local:SettingComboBox.Header>
-            </local:SettingComboBox>
-        </DataTemplate>
-        <DataTemplate x:Name="Boolean"
-                      x:DataType="settings:SettingInfo">
-            <ToggleSwitch HorizontalAlignment="Stretch"
-                          IsOn="{x:Bind Value, Mode=TwoWay, Converter={StaticResource EmptyConverter}}"
-                          OnContent="{x:Bind BooleanRepresent.TrueString}"
-                          OffContent="{x:Bind BooleanRepresent.FalseString}">
-                <ToggleSwitch.Header>
-                    <TextBlock Text="{x:Bind FriendlyName}"
-                               TextWrapping="WrapWholeWords" />
-                </ToggleSwitch.Header>
-            </ToggleSwitch>
-        </DataTemplate>
+        <settingXaml:SettingTemplateSelector x:Key="SettingTemplateSelector">
+            <settingXaml:SettingTemplateSelector.CustomTemplateDictionary>
+                <ResourceDictionary Source="ms-appx:///Settings/SettingPresenterTemplates.xaml" />
+            </settingXaml:SettingTemplateSelector.CustomTemplateDictionary>
+        </settingXaml:SettingTemplateSelector>
     </Page.Resources>
     <Page.Transitions>
         <TransitionCollection>
