--- a/ExViewer/Settings/SettingPresenterTemplates.xaml
+++ b/ExViewer/Settings/SettingPresenterTemplates.xaml
@@ -1,11 +1,11 @@
 ﻿<ResourceDictionary x:Class="ExViewer.Settings.SettingPresenterTemplates"
                     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:local="using:ExViewer.Settings"
+                    xmlns:settings="using:ApplicationDataManager.Settings"
                     xmlns:controls="using:ExViewer.Controls"
                     xmlns:a="using:ExViewer.Views">
     <DataTemplate x:Name="CatagorySettingTemplate"
-                  x:DataType="local:SettingInfo">
+                  x:DataType="settings:SettingInfo">
         <StackPanel>
             <TextBlock Text="{Binding FriendlyName}" />
             <controls:CategorySelector SelectedCategory="{Binding Value, Mode=TwoWay}"
