search history to application data
Former-commit-id: 8a67a87d0102efcea649448fa22556d1afa0aae4 [formerly 71d98df938bf9fcc80466752080a644a9af79dd9]
Former-commit-id: 3b0edae5c32c6d4c85e996327eda193aae1c499a

--- a/ExViewer/Views/SettingsPage.xaml
+++ b/ExViewer/Views/SettingsPage.xaml
@@ -7,14 +7,13 @@
       x:Class="ExViewer.Views.SettingsPage"
       NavigationCacheMode="Enabled"
       mc:Ignorable="d"
-      xmlns:settings="using:ApplicationDataManager.Settings"
-      xmlns:settingXaml="using:ApplicationDataManager.Settings.Xaml">
+      xmlns:settings="using:ApplicationDataManager.Settings">
     <Page.Resources>
-        <settingXaml:SettingTemplateSelector x:Key="SettingTemplateSelector">
-            <settingXaml:SettingTemplateSelector.CustomTemplateDictionary>
+        <settings:SettingTemplateSelector x:Key="SettingTemplateSelector">
+            <settings:SettingTemplateSelector.CustomTemplateDictionary>
                 <ResourceDictionary Source="ms-appx:///Settings/SettingPresenterTemplates.xaml" />
-            </settingXaml:SettingTemplateSelector.CustomTemplateDictionary>
-        </settingXaml:SettingTemplateSelector>
+            </settings:SettingTemplateSelector.CustomTemplateDictionary>
+        </settings:SettingTemplateSelector>
     </Page.Resources>
     <Page.Transitions>
         <TransitionCollection>
